message("In ${CMAKE_CURRENT_SOURCE_DIR}")
FILE(GLOB_RECURSE HEADER_FILES "*.h" PARENT_SCOPE)
FILE(GLOB_RECURSE SOURCE_FILES "*.c" PARENT_SCOPE)

set(HEADER_FILES ${HEADER_FILES} include/darknet.h PARENT_SCOPE)
set(CUDA_FILES)
if ( GPU )
   message("Compiling for GPU...")
   FILE(GLOB_RECURSE CUDA_FILES "*.cu" PARENT_SCOPE)
   message("CUDA_FILES = ${CUDA_FILES}")
endif()

message("SOURCE_FILES = ${SOURCE_FILES}")
add_library(DarkNet SHARED ${HEADER_FILES} ${SOURCE_FILES} ${CUDA_FILES})
SET_TARGET_PROPERTIES(DarkNet PROPERTIES LINKER_LANGUAGE C)
